# desi-y1-p1d

./: .gitignore  README.md  getMockTrueDLAcat.py  ohio-quickquasars-scripter.sh  requirements.txt  setup.cfg
.github/workflows/: testing.yml
etc/: getMockTrueDLAcat.py  ohio-quickquasars-scripter.sh  readme_legacy.md
src/desi_y1_p1d/: __init__.py  add_forest_simspec.py  cnn_dla_confidence_cuts.py  convert_lym1d_power_to_qmlefile.py  fit_amplifier_regions.py  generate_cosmo_params.py  generate_lym1d_power.py  generate_raw_stats.py  get_deltas_from_pixsim_coadd.py  get_deltas_from_simspec.py  get_power_spectra_zeros.py  hist_pixels_in_delta_files.py  ohio_jobs.py  ohio_quickquasars.py  ohio_transmissions.py  qq_zcatalog.py  qsonic_job.py  settings.py  true_dla_catalog.py  utils.py
src/desi_y1_p1d/configs/: data_tile_y1_cmb_calib.ini  data_tile_y1_cmb_calib_highsnr.ini  data_tile_y1_v1_allsyst.ini  data_tile_y1_v1_allsyst_calib.ini  data_tile_y1_v2_allsyst.ini  data_tile_y1_v2_allsyst_calib.ini  data_tile_y1_v2_calibonly.ini  data_tile_y1_v3_allsyst_singlecalib.ini  data_y1_iron_cmb.ini  data_y1_iron_v0_nosyst.ini  data_y1_iron_v0_nosyst.json  data_y1_iron_v1_allsyst.ini  data_y1_iron_v1p_allsyst.ini  data_y1_iron_v2_allsyst.ini  data_y1_iron_v3_allsyst_calib.ini  data_y1_iron_v3_allsyst_xe.ini  data_y1_iron_v3_calibonly.ini  data_y1_iron_v3_sbs_xe.ini  data_y3_cmb.ini  desi_y1_iron_v0_nosyst.json  mock_y1_iron_v0_nosyst.ini  mock_y1_iron_v0_nosyst.json  mock_y1_iron_v2_allsyst.ini  mock_y1_iron_v2_nosyst.ini  mock_y1_iron_v3_allsyst.ini  mock_y1_iron_v3_nosyst.ini
src/desi_y1_p1d/scripts/: setup_data_chain.py  setup_p1d_chain.py
