[bumpversion]
current_version = 0.2.2
commit = True
tag = True

[bumpversion:file:src/desi_y1_p1d/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[metadata]
name = desi_y1_p1d
version = attr: desi_y1_p1d.__version__
author = Naim Goksel Karacayli
author_email = ngokselk@gmail.com
description = DESI Y1 P1D related scripts and version control
license = MIT

[options]
package_dir = 
	=src
packages = find_namespace:
include_package_data = True
python_requires = >=3.7, <3.11
install_requires = file: requirements.txt

[options.packages.find]
where = src

[options.package_data]
desi_y1_p1d = 
	configs/*.json

[options.entry_points]
console_scripts = 
	setup-ohio-chain = desi_y1_p1d.scripts.setup_p1d_chain:main
	setup-desi-chain = desi_y1_p1d.scripts.setup_data_chain:main
	get-qq-true-dla-catalog = desi_y1_p1d.true_dla_catalog:main
